did some things :/

--- a/our-clients.html
+++ b/our-clients.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!--
-Design by TEMPLATED
-http://templated.co
-Released for free under the Creative Commons Attribution License
-
-Name       : Assembly 
-Description: A two-column, fixed-width design with dark color scheme.
-Version    : 1.0
-Released   : 20140330
-
--->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -17,10 +6,10 @@ Released   : 20140330
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="//fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet" />
-<link href="/css/default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="/css/fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/assets/css/default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/assets/css/fonts.css" rel="stylesheet" type="text/css" media="all" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js" integrity="sha512-+k1pnlgt4F1H8L7t3z95o3/KO+o78INEcXTbnoJQ/F2VqDVhWoaiVml/OEHv9HsVgxUaVW+IbiZPUJQfF/YxZw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="/js/main.js"></script>
+<script src="/assets/js/main.js"></script>
 
 <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
@@ -33,21 +22,21 @@ Released   : 20140330
 		</div>
 		<div id="menu">
 			<ul>
-				<li><a href="index.html" title="">Homepage</a></li>
-				<li><a href="our-clients.html" title="">Our Clients</a></li>
-				<li><a href="about-us.html" title="">About Us</a></li>
-				<li><a href="careers.html" title="">Careers</a></li>
-				<li><a href="contact-us.html" title="">Contact Us</a></li>
+				<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
+				<li><a href="our-clients.html" accesskey="2" title="">Our Clients</a></li>
+				<li><a href="about-us.html" accesskey="3" title="">About Us</a></li>
+				<li><a href="careers.html" accesskey="4" title="">Careers</a></li>
+				<li><a href="contact-us.html" accesskey="5" title="">Contact Us</a></li>
 			</ul>
 		</div>
 	</div>
 	<div id="banner" class="container">
 		<div class="title">
-			<h2>Welcome to SkillJet</h2>
-			<span class="byline">your trusted partner in providing comprehensive solutions for the oil and gas industry</span>
+			<h2>OUR CLIENTS</h2>
+			<span class="byline">Donec pulvinar ullamcorper metus</span>
 		</div>
 		<ul class="actions">
-			<li><a href="contact-us.html" class="button">CONTACT US</a></li>
+			<li><a href="#" class="button">Pulvinar mollis</a></li>
 		</ul>
 	</div>
 </div>
