--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html">list<span>race</span></a>
+			                <a style="display: flex; align-items: center; justify-content: center; margin-top: 10px;" class="navbar-brand" href="index.html"><img width="40" height="40" src="/assets/images/skilljet/logo/Skill jet-17.png" alt="">SkillJet</a>
 
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
@@ -151,7 +151,7 @@
 		<!--welcome-hero start -->
 		<section id="home" class="welcome-hero">
 			<div class="container">
-				<div class="welcome-hero-txt">
+				<div class="welcome-hero-txt" style="margin-top: 50px;">
 					<h2>Welcome To SkillJet</h2>
 					<p>
 						your trusted partner in providing comprehensive solutions for the oil and gas industry. 
@@ -353,17 +353,17 @@
 					<p style="margin-top: 60px;">Some of our notable projects include</p>
 				</div><!--/.section-header-->
 				<div class="explore-content" style="width: 60%; width: 70%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column;">
-					<div style="padding: 20px 0; width: 100%; text-align: left;">
-						•	[Oil Waste Recovery - Brega] Our part is EPC services to our Client : Pavilion Renewables
+					<div style="padding: 20px 0; width: 100%; text-align: center;">
+						[Oil Waste Recovery - Brega] Our part is EPC services to our Client : Pavilion Renewables
 					</div>
-					<div style="padding: 20px 0; width: 100%; text-align: left;">
-						•	[Oil Waste Recovery - Messla] Our part is EPC services to our Client : Pavilion Renewables
+					<div style="padding: 20px 0; width: 100%; text-align: center;">
+						[Oil Waste Recovery - Messla] Our part is EPC services to our Client : Pavilion Renewables
 					</div>
-					<div style="padding: 20px 0; width: 100%; text-align: left;">
-						•	[Oil Waste Recovery - Nafora] Our part is EPC services to our Client : Pavilion Renewables
+					<div style="padding: 20px 0; width: 100%; text-align: center;">
+						[Oil Waste Recovery - Nafora] Our part is EPC services to our Client : Pavilion Renewables
 					</div>
-					<div style="padding: 20px 0; width: 100%; text-align: left;">
-						•	[Flowmeter & Streamline Replacement - Nafora] Full services to our Client : AGOCO
+					<div style="padding: 20px 0; width: 100%; text-align: center;">
+						[Flowmeter & Streamline Replacement - Nafora] Full services to our Client : AGOCO
 					</div>
 				</div>
 			</div><!--/.container-->
@@ -431,7 +431,7 @@
 				<h2>Our location on map</h2>
 			</div>
 			
-			<div style="text-decoration:none; overflow:hidden;max-width:100%;width:900px;height:500px;"><div id="g-mapdisplay" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/search?q=الحدائق،+شارع+الحدائق،+Benghazi,+Libya&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embedded-map-code" href="https://www.bootstrapskins.com/themes" id="grab-maps-authorization">premium bootstrap themes</a><style>#g-mapdisplay img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>			
+			<div style="text-decoration:none; overflow:hidden;max-width:100%;width:100%;height:500px;"><div id="g-mapdisplay" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/search?q=الحدائق،+شارع+الحدائق،+Benghazi,+Libya&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embedded-map-code" href="https://www.bootstrapskins.com/themes" id="grab-maps-authorization">premium bootstrap themes</a><style>#g-mapdisplay img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>			
 		
 		</section>
 		<!--blog end -->
@@ -459,8 +459,7 @@
 		           	<div class="row">
 			           	<div class="col-sm-3">
 			           		 <div class="navbar-header">
-				                <a class="navbar-brand" href="index.html">list<span>race</span></a>
-				            </div><!--/.navbar-header-->
+								<a style="display: flex; align-items: center; justify-content: center; margin-top: 10px;" class="navbar-brand" href="index.html"><img width="40" height="40" src="/assets/images/skilljet/logo/Skill jet-17.png" alt="">SkillJet</a>				            </div><!--/.navbar-header-->
 			           	</div>
 			           	<div class="col-sm-9">
 			           		<ul class="footer-menu-item">
@@ -478,7 +477,7 @@
 					<div class="row">
 						<div class="col-sm-5">
 							<p>
-								&copy;copyright. designed and developed by <a href="https://www.themesine.com/">themesine</a>
+								&copy; 2024 SkillJet, All rights reserved.
 							</p><!--/p-->
 						</div>
 						<div class="col-sm-7">
